crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__relation_field_names_snapshot@relation_field_names_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class OrderRegions(models.Model):
    pk = models.CompositePrimaryKey("order_id", "region_id")
    order_id = models.IntegerField()
    region_id = models.IntegerField()

    class Meta:
        managed = False
        db_table = "order_regions"

class OrderItems(models.Model):
    id = models.IntegerField(primary_key=True)
    order_id = models.IntegerField()
    region_id = models.IntegerField()
    order_regions = models.TextField()
    order_regions2 = models.TextField()
    # composite foreign key: (order_id, region_id) -> order_regions(order_id, region_id)

    class Meta:
        managed = False
        db_table = "order_items"

class Users(models.Model):
    id = models.IntegerField(primary_key=True)
    posts = models.TextField()

    class Meta:
        managed = False
        db_table = "users"

class Posts(models.Model):
    id = models.IntegerField(primary_key=True)
    user = models.ForeignKey("Users", on_delete=models.RESTRICT, related_name="+")
    table_name = models.ForeignKey("Categories", on_delete=models.RESTRICT, related_name="+")

    class Meta:
        managed = False
        db_table = "posts"

class Categories(models.Model):
    id = models.IntegerField(primary_key=True)
    parent = models.ForeignKey("Categories", on_delete=models.RESTRICT, related_name="+", null=True, blank=True)

    class Meta:
        managed = False
        db_table = "categories"
