crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__relation_field_names_snapshot@relation_field_names_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
model OrderRegions {
  order_id Int
  region_id Int
  order_items OrderItems[]

  @@id([order_id, region_id])
  @@map("order_regions")
}

model OrderItems {
  id Int @id
  order_id Int
  region_id Int
  order_regions String
  order_regions2 String
  order_regions_rel OrderRegions @relation(fields: [order_id, region_id], references: [order_id, region_id], onDelete: Cascade, onUpdate: Restrict)

  @@map("order_items")
}

model Users {
  id Int @id
  posts String
  posts_rel Posts[]

  @@map("users")
}

model Posts {
  id Int @id
  user_id Int
  user Users @relation(fields: [user_id], references: [id], onDelete: NoAction, onUpdate: NoAction)
  table_name_id Int
  table_name Categories @relation(fields: [table_name_id], references: [id], onDelete: NoAction, onUpdate: NoAction)

  @@map("posts")
}

model Categories {
  id Int @id
  parent_id Int?
  parent Categories? @relation("CategoriesParent", fields: [parent_id], references: [id], onDelete: NoAction, onUpdate: NoAction)
  posts Posts[]
  parent_categories Categories[] @relation("CategoriesParent")

  @@map("categories")
}
